Fix caption for Pytorch loss fig

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -306,7 +306,7 @@ For the VoxelMorph 2D and 3D models, a negligible number of early batches requir
         \caption{Voxelmorph 3D}
         \label{subfig:vm3d-loss}
     \end{subfigure}
-    \caption{Loss Curves for the PyTorch Models batches for the PyTorch models. The horizontal dashed lines indicate the precision thresholds for FP16, TF32, FP24 (not available on H100), FP32, and FP64.}
+    \caption{Loss Curves for the PyTorch Models batches for the PyTorch models.}
     \label{fig:pytorch-loss}
 \end{figure*}
 
